--- a/RazorSolution/ACentenoWebApp/_Menu.cshtml
+++ b/RazorSolution/ACentenoWebApp/_Menu.cshtml
@@ -22,6 +22,7 @@
             <!--this will be the dropdown menu items-->
             <ul class="dropdown-menu">
                 <li><a href="@Href("~/ExercisePages/Exercise01.cshtml")">Exercise 01</a></li>
+                <li><a href="@Href("~/ExercisePages/Exercise02_A.cshtml")">Exercise 02</a></li>
             </ul>
         </li>
     </ul>
