--- a/RazorSolution/ACentenoWebApp/ExercisePages/Exercise02_C.cshtml
+++ b/RazorSolution/ACentenoWebApp/ExercisePages/Exercise02_C.cshtml
@@ -15,6 +15,15 @@
                             + "WHERE ArtistId = @0";
 
     var artistName = db.QueryValue(artistNameCommand, artistId);
+
+    var albumListCommand = "SELECT AlbumId, Title, ReleaseYear, ReleaseLabel "
+                            + "FROM Albums "
+                            + "WHERE ArtistId = @0 "
+                            + "ORDER BY Title";
+
+    var albumList = db.Query(albumListCommand, artistId);
+
+    var gridInstance = new WebGrid(albumList, rowsPerPage: 10);
 }
 @section pagetitle{
     <span style="font-size:xx-large"><strong>Exercise02: Database Query</strong></span>
@@ -27,8 +36,27 @@
     <title></title>
 </head>
 <body>
-    <div>
-        <h4>You passed the value @Request.QueryString["aid"]</h4>
+    <div class="row">
+        <div class="container">
+            <span style="font-size:x-large">
+                <strong>
+                   @artistName
+                </strong>
+            </span>
+            <!--Display the WebGrid instance in its default display-->
+            @gridInstance.GetHtml(
+            tableStyle: "table table-bordered table-striped table-hover",
+            mode: WebGridPagerModes.All,
+            firstText: "Start",
+            lastText: "End",
+            columns: gridInstance.Columns(
+                        gridInstance.Column(columnName: "AlbumID", header: "ID"),
+                        gridInstance.Column(columnName: "Title", header: "Title"),
+                        gridInstance.Column(columnName: "ReleaseYear", header: "Release Year"),
+                        gridInstance.Column(columnName: "ReleaseLabel", header: "Release Label")
+             )
+ )
+        </div>
     </div>
 </body>
 </html>
