--- a/FormsAndRazor/WebApp/_Menu.cshtml
+++ b/FormsAndRazor/WebApp/_Menu.cshtml
@@ -32,6 +32,7 @@
             <ul class="dropdown-menu">
                 <li><a href="@Href("~/DBPages/DBSingleQuery.cshtml")">PKey Query</a></li>
                 <li><a href="@Href("~/DBPages/MultiRecordQuery.cshtml")">M/R Query</a></li>
+                <li><a href="@Href("~/DBPages/Insert.cshtml")">Insert</a></li>
             </ul>
         </li>
         <li><a href="@Href("~/About.cshtml")">About</a></li>
