--- a/RazorSolution/ACentenoWebApp/ExercisePages/Exercise02_A.cshtml
+++ b/RazorSolution/ACentenoWebApp/ExercisePages/Exercise02_A.cshtml
@@ -3,11 +3,7 @@
     Page.Title = "Exercise02";
 
     var artistName = Request.Form["artistName"];
-    var fetchButton = Request.Form["fetchButton"];
-
-    var partialString = "%" + artistName + "%";
-
-    var db = Database.Open("CHINOOKDB");
+    var fetchButton = Request.Form["fetchButton"]; 
     
 }
 
@@ -17,30 +13,35 @@
 <div>
     @if (IsPost)
     {
+         // check if no name was entered
          if (string.IsNullOrEmpty(artistName))
          {
                 <div class="alert alert-danger" role="alert">
                     Please enter an artist name.
                 </div>
          }
-         else
+         else //if name was entered
          {
+            var partialString = "%" + artistName + "%";
+
+            var db = Database.Open("CHINOOKDB");
 
             var querycommand = "SELECT ArtistId "
                     + "FROM Artists "
                     + "WHERE Name like @0";
             var queryresults = db.Query(querycommand, partialString);
 
-             if (queryresults.Count() == 0)
-             {
+            // if there is no result from the query
+            if (queryresults.Count() == 0)
+            {
                 <div class="alert alert-danger" role="alert">
                     No artist/s found in the database.
                 </div>
-             }
-             else
-             {
-                 Response.Redirect("Exercise02_B.cshtml?artist=" + artistName);
-             }
+            }
+            else // if there is a result from the query
+            {
+                Response.Redirect("Exercise02_B.cshtml?artist=" + artistName);
+            }
          }
     }
     <form action="" method="post" id="EX02">
