--- a/RazorSolution/ACentenoWebApp/ExercisePages/Exercise03.cshtml
+++ b/RazorSolution/ACentenoWebApp/ExercisePages/Exercise03.cshtml
@@ -17,7 +17,7 @@
 
     var artistlist = db.Query(artistquery);
 
-    Validation.Add("AlbumTitle", Validator.Required("Title is required."));
+    Validation.RequireField("AlbumTitle", "Title is required.");
     Validation.Add("AlbumTitle", Validator.StringLength(160, 1, "Title should be equal or less than 160 characters."));
 
     Validation.Add("AlbumArtist", Validator.Required("Artist is required."));
@@ -32,16 +32,16 @@
     <span style="font-size:xx-large"><strong>Exercise03: Database Data Entry</strong></span>
 }
 
-@if (IsPost && Validation.IsValid())
+@if (IsPost)
 {
 
     if (formbutton.Equals("reset"))
     {
         <p class="col-sm-11 text-center">Cleared by user</p>
-         albumtitle = "";
-         //var albumartist = "";
-         albumyear = "";
-         albumlabel = "";
+        albumtitle = "";
+        albumartist = "";
+        albumyear = "";
+        albumlabel = "";
     }
     else
     {
@@ -51,55 +51,58 @@
         albumyear = Request.Form["AlbumYear"];
         albumlabel = Request.Form["AlbumLabel"];
 
-        try
+        if (Validation.IsValid())
         {
-            var db1 = Database.Open("CHINOOKDB");
+            try
+            {
+                var db1 = Database.Open("CHINOOKDB");
 
+                var insertcommand = "INSERT INTO Albums  (Title, ArtistId, ReleaseYear, ReleaseLabel) "
+                                + "VALUES(@0, @1, @2, @3)";
 
+                db1.Execute(insertcommand,
+                     string.IsNullOrEmpty(albumtitle) ? null : albumtitle,
+                     string.IsNullOrEmpty(albumartist) ? null : albumartist,
+                     string.IsNullOrEmpty(albumyear) ? null : albumyear,
+                     string.IsNullOrEmpty(albumlabel) ? null : albumlabel);
 
-
-            var insertcommand = "INSERT INTO Albums  (Title, ArtistId, ReleaseYear, ReleaseLabel) "
-                            + "VALUES(@0, @1, @2, @3)";
-
-            db1.Execute(insertcommand,
-                 string.IsNullOrEmpty(albumtitle) ? null : albumtitle,
-                 string.IsNullOrEmpty(albumartist) ? null :  albumartist,
-                 string.IsNullOrEmpty(albumyear) ? null : albumyear,
-                 string.IsNullOrEmpty(albumlabel) ? null : albumlabel);
-
-            <p class="col-sm-11 text-center">
-                <span style="color:green">
-                    New album added
-                </span>
-            </p>
+                <p class="col-sm-11 text-center">
+                    <span style="color:green">
+                        New album added
+                    </span>
+                </p>
+            }
+            catch (Exception ex)
+            {
+                <p class="col-sm-11 text-center">
+                    <span style="color:firebrick">
+                        <strong>@ex.Message</strong>
+                    </span>
+                </p>
+            }
         }
-        catch (Exception ex)
-        {
-            <p class="col-sm-11 text-center">
-                <span style="color:firebrick">
-                    <strong>@ex.Message</strong>
-                </span>
-            </p>
-        }
+
+
     }
 
 }
 <div>
-    @Html.ValidationSummary()
     <div class="row">
         <div class="col-xs-6">
             <form class="form-horizontal" id="theForm" action="" method="post">
                 <div class="form-group">
                     <label class="col-xs-2" id="forTitle">Title:</label>
                     <div class="col-xs-10">
-                        <input class="form-control" type="text" name="AlbumTitle" id="AlbumTitle" value="@albumtitle" placeholder="title" />
+                        <input class="input-validation-error form-control" type="text" name="AlbumTitle" id="AlbumTitle" value="@albumtitle" placeholder="title" />
+                        <span class="text-danger">@Html.ValidationMessage("AlbumTitle")</span>
                     </div>
+
                 </div>
                 <div class="form-group">
                     <label class="col-xs-2" id="forArtist">Artist:</label>
                     <div class="col-xs-10">
-                        <select class="form-control" id="AlbumArtist" name="AlbumArtist">
-                            <option value="0">Select Artist...</option>
+                        <select class="form-control" id="AlbumArtist" name="AlbumArtist" value="@albumartist">
+                            <option value="">Select Artist...</option>
                             @foreach (var item in artistlist)
                             {
                                 if (albumartist.Equals(item[0].ToString()))
@@ -112,18 +115,21 @@
                                 }
                             }
                         </select>
+                        <span class="text-danger">@Html.ValidationMessage("AlbumArtist")</span>
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="col-xs-2" id="forYear">Year:</label>
                     <div class="col-xs-10">
-                        <input class="form-control" type="number" name="AlbumYear" id="AlbumYear" value="@albumyear" placeholder="year" />
+                        <input class="input-validation-error form-control" type="number" name="AlbumYear" id="AlbumYear" value="@albumyear" placeholder="year" />
+                        <span class="text-danger">@Html.ValidationMessage("AlbumYear")</span>
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="col-xs-2" id="forLabel">Label:</label>
                     <div class="col-xs-10">
-                        <input class="form-control" type="text" name="AlbumLabel" id="AlbumLabel" value="@albumlabel" placeholder="label" />
+                        <input class="input-validation-error form-control" type="text" name="AlbumLabel" id="AlbumLabel" value="@albumlabel" placeholder="label" />
+                        <span class="text-danger">@Html.ValidationMessage("AlbumLabel")</span>
                     </div>
                 </div>
                 <div class="row">
